# evolIA

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  NETWORK_ARCHITECTURE.md  README.md  RELEASE.md  SECURITY.md  TERMUX.md
.github/workflows/: ci.yml  release.yml
android/: README.md  VALIDATION.md  settings.gradle.kts
android/app/: build.gradle.kts  debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-mg/: strings.xml
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
android/fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt
contracts/: EvoliaCore.json  EvoliaCore.sol
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt  whatsnew.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt
fastlane/metadata/android/fr/: full_description.txt  short_description.txt  whatsnew.txt
fastlane/metadata/android/mg/: full_description.txt  short_description.txt  whatsnew.txt
go/: go.mod
go/bridge/: bridge.go  bridge_test.go
go/chat/: chat.go  chat_test.go
go/cmd/evolia-bridge/: main.go
go/cmd/evolia-net/: main.go
go/cmd/mesh-sync/: main.go
go/defense/: defense.go  defense_test.go
go/egress/: egress.go  egress_test.go
go/mesh/: incoming_test.go  mesh.go  mesh_test.go
go/meshstats/: meshstats.go  meshstats_test.go
go/netdisc/: netdisc.go  netdisc_test.go
go/paths/: paths.go  paths_test.go
go/peerhealth/: peerhealth.go  peerhealth_test.go
go/pow/: pow.go  pow_test.go
python/: dashboard.py  evolia_actions.py  evolia_bitcoin.py  evolia_deploy.py  evolia_evolve.py  evolia_learning.py  evolia_paths.py  evolia_run.py  evolia_sensors.py  evolia_supernode.py  evolia_value.py  ganache_db.py  requirements-web3.txt  requirements.txt
python/tests/: test_actions.py  test_services.py  test_value.py  test_web3.py
rust/: Cargo.toml
rust/evolia-auth/: Cargo.toml
rust/evolia-auth/src/: lib.rs
rust/evolia-core/: Cargo.toml
rust/evolia-core/src/: lib.rs
rust/evolia-security/: Cargo.toml
rust/evolia-security/src/: evolutive.rs  lib.rs
rust/evolia-start/: Cargo.toml
rust/evolia-start/src/: main.rs
rust/evolia-stop/: Cargo.toml
rust/evolia-stop/src/: main.rs
scripts/: build-android-binaries.sh  install-termux.sh  setup-web3-termux.sh
(+61 files in other folders)
