[package]
name = "evolia-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evolia-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rpassword = { workspace = true }
