[package]
name = "evolia-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evolia-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
