[package]
name = "evolia-start"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evolia-core = { workspace = true }
evolia-auth = { workspace = true }
evolia-security = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
nix = { workspace = true }
