[package]
name = "evolia-stop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evolia-core = { workspace = true }
evolia-auth = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
